<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_pan"
                android:orientation="vertical">

    <ImageView
        android:id="@+id/icon"
        android:layout_width="@dimen/icon_150"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:adjustViewBounds="true"
        android:src="@drawable/icon_app_english"
        android:visibility="visible"
        />

    <LinearLayout
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:id="@+id/ln_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_medium"
        android:paddingRight="@dimen/padding_medium">
        <EditText
            android:paddingRight="@dimen/padding_small"
            android:drawableRight="@drawable/ic_email_white_18dp"
            android:paddingLeft="@dimen/padding_small"
            android:textColorHint="@color/color_white"
            android:textColor="@color/color_white"
            android:hint="@string/txt_email"
            android:id="@+id/ed_email_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingBottom="@dimen/padding_small_x"
            android:paddingTop="@dimen/padding_small_x"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_green"
            />

        <EditText
            android:id="@+id/ed_pass_login"
            android:paddingRight="@dimen/padding_small"
            android:drawableRight="@drawable/ic_lock_white_18dp"
            android:paddingLeft="@dimen/padding_small"
            android:textColorHint="@color/color_white"
            android:textColor="@color/color_white"
            android:hint="@string/txt_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small_x"
            android:background="@drawable/bg_edittext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingBottom="@dimen/padding_small_x"
            android:paddingTop="@dimen/padding_small_x"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_green"
            />
        <TextView
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:background="@drawable/bg_btn_sign_in"
            android:paddingBottom="@dimen/padding_small_x"
            android:paddingTop="@dimen/padding_small_x"
            android:text="@string/txt_sign_in"
            android:textAlignment="center"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_size_18"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small_x"
            android:text="@string/txt_or"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_size_18"
            android:textStyle="bold"/>
        <TextView
        android:id="@+id/btn_sign_in_fb"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_sign_in"
        android:paddingBottom="@dimen/padding_small_x"
        android:paddingTop="@dimen/padding_small_x"
        android:text="@string/txt_signin_fb"
        android:textColor="@color/color_white"
        android:textSize="@dimen/text_size_18"
        android:textStyle="bold"/>
        <TextView
            android:id="@+id/tv_sign_up"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/padding_small_x"
            android:paddingTop="@dimen/padding_small_x"
            android:text="@string/txt_sign_up"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_size_18"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:id="@+id/ln_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/padding_medium"
        android:paddingRight="@dimen/padding_medium">
        <EditText
            android:paddingRight="@dimen/padding_small"
            android:drawableRight="@drawable/ic_email_white_18dp"
            android:paddingLeft="@dimen/padding_small"
            android:textColorHint="@color/color_white"
            android:textColor="@color/color_white"
            android:hint="@string/txt_email"
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_edittext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingBottom="@dimen/padding_small_x"
            android:paddingTop="@dimen/padding_small_x"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_green"
            />

        <EditText
            android:id="@+id/ed_username"
            android:paddingRight="@dimen/padding_small"
            android:drawableRight="@drawable/ic_account_circle_white_18dp"
            android:paddingLeft="@dimen/padding_small"
            android:textColorHint="@color/color_white"
            android:textColor="@color/color_white"
            android:hint="@string/txt_user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small_x"
            android:background="@drawable/bg_edittext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingBottom="@dimen/padding_small_x"
            android:paddingTop="@dimen/padding_small_x"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_green"
            />
        <EditText
            android:id="@+id/ed_pass"
            android:paddingRight="@dimen/padding_small"
            android:drawableRight="@drawable/ic_lock_white_18dp"
            android:paddingLeft="@dimen/padding_small"
            android:textColorHint="@color/color_white"
            android:textColor="@color/color_white"
            android:hint="@string/txt_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_small_x"
            android:background="@drawable/bg_edittext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingBottom="@dimen/padding_small_x"
            android:paddingTop="@dimen/padding_small_x"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_green"
            />
        <TextView
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium_x"
            android:background="@drawable/bg_btn_sign_in"
            android:paddingBottom="@dimen/padding_small_x"
            android:paddingTop="@dimen/padding_small_x"
            android:text="@string/txt_sign_up_1"
            android:textAlignment="center"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_size_18"
            android:textStyle="bold"/>
    </LinearLayout>

</RelativeLayout>